-
Bug
-
Resolution: Fixed
-
Major
-
None
-
3
-
9223372036854775807
There is a feature that starts a target with a local copy of
config log in order to avoid a delay in communicating with
an MGS and to load mgs log updates later on.
However, that feature is not always useful
When replace_nids adds records with new nids it does not
append remote config logs but overwrite corresponding
records in place. If a target starts using local config
log - it gets confused by outdated nids.
Let's add tunefs.lustre --nolocallogs key that
sets nolocallogs flag, which says ignore local configs copy.
The flag is reset once new logs are uploaded from MGS.
tunefs.lustre --nolocallogs is suggested to be executed on
targets together with replace_nids on MGS.