lustre/include/uapi/linux/lustre/lustre_disk.h
@@ -102,6 +102,8 @@
 #define LDD_F_ERROR		0x4000
 /** process at lctl conf_param */
 #define LDD_F_PARAM2		0x8000
+/** the target shouldn't use local logs */
+#define LDD_F_NO_LOCAL_LOGS	0x10000
 
 #define LDD_MAGIC 0x1dd00001
 
